# AFFiNE

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .yarnrc.yml  Cargo.toml  README.md  eslint.config.mjs  oxlint.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.project.json  vitest.workspace.ts
.cargo/: config.toml
.devcontainer/: Dockerfile  build.sh  docker-compose.yml
.docker/dev/: .env.example  .gitignore  compose.yml.example
.docker/selfhost/: .env.example  compose.yaml
.github/: CODEOWNERS  renovate.json
.github/workflows/: build-images.yml  build-test.yml  copilot-test-automatically.yml  copilot-test.yml  deploy.yml  release-desktop.yml  release-mobile.yml  sync-i18n.yml  workers.yml
.yarn/patches/: @atlaskit-pragmatic-drag-and-drop-npm-1.4.0-75c45f52d3.patch  yjs-npm-13.6.21-c9f1f3397c.patch
blocksuite/: tsconfig.json
blocksuite/blocks/: package.json  schemas.d.ts  schemas.js  tsconfig.json  vitest.config.ts
blocksuite/framework/: tsconfig.json
blocksuite/integration-test/: package.json
blocksuite/playground/: index.html  package.json  style.css  tsconfig.json  vite.config.ts
blocksuite/presets/: package.json  tsconfig.json  vite.config.ts  vitest.config.ts
blocksuite/tests-legacy/: attachment.spec.ts  basic.spec.ts  bookmark.spec.ts  custom-loader.mjs  drag.spec.ts  embed-synced-doc.spec.ts  format-bar.spec.ts  link.spec.ts  linked-page.spec.ts  package.json  paragraph.spec.ts  playwright.config.ts  slash-menu.spec.ts  tsconfig.json  zero-width.spec.ts
docs/: BUILDING.md  building-desktop-client-app.md  developing-server.md
docs/reference/: package.json
scripts/: check-version.mjs  detect-blocksuite-update.mjs  generate-release-yml.js  generate-release-yml.mjs
scripts/setup/: global.ts  vi-mock.ts
tests/affine-cloud-copilot/: package.json  (+1 more)
(+1802 files in other folders)
