[workspace]
members = [
  "./packages/backend/native",
  "./packages/common/native",
  "./packages/frontend/mobile-native",
  "./packages/frontend/native",
  "./packages/frontend/native/nbstore",
  "./packages/frontend/native/schema",
  "./packages/frontend/native/sqlite_v1",
]
resolver = "2"

[workspace.dependencies]
affine_common    = { path = "./packages/common/native" }
affine_nbstore   = { path = "./packages/frontend/native/nbstore" }
anyhow           = "1"
base64-simd      = "0.8"
chrono           = "0.4"
criterion2       = { version = "2", default-features = false }
dotenvy          = "0.15"
file-format      = { version = "0.26", features = ["reader"] }
homedir          = "0.3"
mimalloc         = "0.1"
napi             = { version = "3.0.0-alpha.12", features = ["async", "chrono_date", "error_anyhow", "napi9", "serde"] }
napi-build       = { version = "2" }
napi-derive      = { version = "3.0.0-alpha.12" }
notify           = { version = "8", features = ["serde"] }
objc2            = "0.6"
objc2-foundation = "0.3"
once_cell        = "1"
parking_lot      = "0.12"
rand             = "0.9"
rayon            = "1.10"
serde            = "1"
serde_json       = "1"
sha3             = "0.10"
sqlx             = { version = "0.8", default-features = false, features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls"] }
thiserror        = "2"
tiktoken-rs      = "0.6"
tokio            = "1.37"
uniffi           = "0.29"
uuid             = "1.8"
v_htmlescape     = "0.15"
y-octo           = { git = "https://github.com/y-crdt/y-octo.git", branch = "main" }

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
